--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "scripts": {
     "prebuild": "rimraf dist",
     "build": "nest build",
+    "build-lambda": "nest build --webpack --webpackPath webpack.config.js",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
     "start:dev": "nest start --watch",
@@ -26,7 +27,10 @@
     "@nestjs/core": "^10.0.3",
     "@nestjs/jwt": "^10.1.0",
     "@nestjs/passport": "^10.0.0",
-    "@nestjs/platform-express": "^10.0.3",
+    "@nestjs/platform-express": "^10.3.10",
+    "@vendia/serverless-express": "^4.12.6",
+    "aws-cdk": "^2.149.0",
+    "aws-lambda": "^1.0.7",
     "helmet": "^7.0.0",
     "passport": "^0.6.0",
     "passport-http": "^0.3.0",
@@ -40,6 +44,7 @@
     "@nestjs/cli": "^10.0.3",
     "@nestjs/schematics": "^10.0.1",
     "@nestjs/testing": "^10.0.3",
+    "@types/aws-lambda": "^8.10.141",
     "@types/express": "^4.17.17",
     "@types/jest": "29.5.2",
     "@types/node": "^20.3.1",
@@ -48,6 +53,7 @@
     "@types/supertest": "^2.0.12",
     "@typescript-eslint/eslint-plugin": "5.60.0",
     "@typescript-eslint/parser": "5.60.0",
+    "dotenv": "^16.4.5",
     "eslint": "8.43.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-import": "^2.27.5",
