--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "scripts": {
     "prebuild": "rimraf dist",
     "build": "nest build",
-    "build-lambda": "nest build --webpack --webpackPath webpack.config.js",
+    "build-lambda": "npm run prebuild && nest build --webpack --webpackPath webpack.config.js",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
     "start:dev": "nest start --watch",
@@ -28,6 +28,7 @@
     "@nestjs/jwt": "^10.1.0",
     "@nestjs/passport": "^10.0.0",
     "@nestjs/platform-express": "^10.3.10",
+    "@nestjs/typeorm": "^10.0.2",
     "@vendia/serverless-express": "^4.12.6",
     "aws-cdk": "^2.149.0",
     "aws-lambda": "^1.0.7",
@@ -38,6 +39,7 @@
     "passport-local": "^1.0.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
+    "typeorm": "^0.3.20",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
