--- a/package.json
+++ b/package.json
@@ -19,7 +19,11 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "test:e2e": "jest --config ./test/jest-e2e.json",
+    "migration:create": "typeorm migration:create ./src/migrations/$npm_config_name",
+    "migration:generate": "npm run build && typeorm-ts-node-commonjs migration:generate ./src/migrations/$npm_config_name -d ./src/db-config.ts",
+    "migration:run": "npm run build && typeorm-ts-node-commonjs migration:run -d ./src/db-config.ts",
+    "migration:revert": "npm run build && typeorm-ts-node-commonjs migration:revert -d ./src/db-config.ts"
   },
   "dependencies": {
     "@nestjs/common": "^10.0.3",
